# faaadmv

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  STATUS.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_MODELS.md  PROJECT_STRUCTURE.md  PROVIDERS.md  SECURITY.md  TESTING.md
src/faaadmv/: __init__.py  __main__.py  exceptions.py  logging.py
src/faaadmv/cli/: __init__.py  app.py  repl.py  ui.py
src/faaadmv/cli/commands/: register.py  renew.py  status.py  vehicles.py
src/faaadmv/core/: __init__.py  browser.py  captcha.py  config.py  crypto.py  keychain.py
src/faaadmv/models/: __init__.py  config.py  owner.py  payment.py  results.py  vehicle.py
src/faaadmv/providers/: __init__.py  base.py  ca_dmv.py  registry.py
testing/: BUGS.md  TEST_STATUS.md
tests/: conftest.py
tests/e2e/: test_register_flow.py  test_status_renew_flow.py
tests/integration/: test_cli_app.py  test_config_roundtrip.py  test_keychain.py
tests/unit/: test_ca_dmv_parsing.py  test_config_manager.py  test_crypto.py  test_exceptions.py  test_models_config.py  test_models_owner.py  test_models_payment.py  test_models_results.py  test_models_vehicle.py  test_registry.py  test_ui.py
