[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faaadmv"
version = "0.1.0"
description = "Agentic DMV registration renewal CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "faaadmv contributors" }
]
keywords = ["dmv", "cli", "automation", "playwright", "vehicle", "registration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic[email]",
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
faaadmv = "faaadmv.cli.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/faaadmv"
Repository = "https://github.com/yourusername/faaadmv"
Issues = "https://github.com/yourusername/faaadmv/issues"
Documentation = "https://github.com/yourusername/faaadmv#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/faaadmv"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["faaadmv"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "keyring.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "browser: marks tests that require a real browser",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src/faaadmv"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
